2008-11-25  higepon  <higepon@users.sourceforge.jp>

        * lib/core/r5rs.scm: Added R5RS comppatible procedures.

        * Passed all of base tests of R6RS test suite.

        * VM.cpp (run): Fixed the bug when continuation is called without argument.

        * Added: COMPILE_ERROR instruction for error detection of letrec.

2008-11-25  kokosabu  <kokosabu@gmail.com>

        * Added : fxbit-count, fxlength, fxfirst-bit-set, fxbit-set?.

2008-11-24  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm (pass1/letrec): Added uninitialized value detection.

        * Fixed error procedure.

        * Fixed integer->char bug.

        * Added string-copy and string-for-each.

        * Fixnum.cpp (Fixnum::integerDiv): Fixed the bug.
                                           The result of integerDiv can be Bignum,
                                           So use Bignum::makeInteger().

        * Fixed (/ 0.000 0) => +inf.0.

        * Fixed (sqrt -5).

        * NumberReader.y (naninf): Fixed imag-part of +inf.

        * Fixed : string=? for arguments length >= 3.

        * Improved : write and display of compound-condition and record.

        * Added symbol=?, boolean=?.

2008-11-23  higepon  <higepon@users.sourceforge.jp>

        * Fixed 1e10 style read for decimal.

        * lib/mosh/condition.ss : Added &no-nans and &no-infinities.

        * Passed all of syntax-case tests of R6RS test suite.

        * Passed all of flonums tests of R6RS test suite.

        * Passed all of bitwise tests of R6RS test suite.

        * Bignum.h : Fixed the bug of bitwise-length when number is negative.

        * Added: number->string.

        * Rewrote: real-part and imag-part.

        * Added: make-rectangular, make-polar, angle and magnitude.

        * Rewrote: expt for Complex numbers.

2008-11-23  kokosabu  <kokosabu@gmail.com>

        * Added : fx+/carry, fx-/carry, fx*/carry, fxnot, fxand, fxior, fxxor, fxif.
