@@ -1,5 +1,7 @@
 2008-11-25  higepon  <higepon@users.sourceforge.jp>
 
+        * Flonum.h : Fixed dereferencing type-punned pointer will break strict-aliasing rules.
+
         * lib/core/r5rs.scm: Added R5RS comppatible procedures.
 
         * Passed all of base tests of R6RS test suite.
